--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2329,8 +2329,8 @@ fieldset[disabled] .btn-default.active {
 
 .btn-primary {
   color: #ffffff;
-  background-color: #428bca;
-  border-color: #357ebd;
+  background-color: #35383a;
+  border-color: #35383a;
 }
 
 .btn-primary:hover,
@@ -2339,8 +2339,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
   color: #ffffff;
-  background-color: #3276b1;
-  border-color: #285e8e;
+  background-color: #35383a;
+  border-color: #35383a;
 }
 
 .btn-primary:active,
@@ -2364,8 +2364,8 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #428bca;
-  border-color: #357ebd;
+  background-color: #35383a;
+  border-color: #35383a;
 }
 
 .btn-warning {
@@ -2493,8 +2493,8 @@ fieldset[disabled] .btn-success.active {
 
 .btn-info {
   color: #ffffff;
-  background-color: #5bc0de;
-  border-color: #46b8da;
+  background-color: #35383a;
+  border-color: #35383a;
 }
 
 .btn-info:hover,
@@ -2503,8 +2503,8 @@ fieldset[disabled] .btn-success.active {
 .btn-info.active,
 .open .dropdown-toggle.btn-info {
   color: #ffffff;
-  background-color: #39b3d7;
-  border-color: #269abc;
+  background-color: #35383a;
+  border-color: #35383a;
 }
 
 .btn-info:active,
